--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,16 @@
 {
-  "version": 2,
-  "builds": [
-    {"src": "main.py", "use":  "@vercel/python"}
-  ],
-  "routes": [
-    {
-      "src": "/(.*)", "dest": "main.py"
-    }
-  ]
+    "version":2,
+    "builds": [
+        {
+            "src":"./main.py",
+            "use": "@vercel/python",
+            "config":{"runtime":"python3.8"}
+        }
+    ],
+    "routes": [
+        {
+            "src":"/(.*)",
+            "dest":"/"
+        }
+    ]
 }
