--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-﻿blinker==1.7.0
-click==8.1.7
-colorama==0.4.6
-Flask==3.0.3
-itsdangerous==2.1.2
-Jinja2==3.1.3
-MarkupSafe==2.1.5
-Pillow==10.0.0
-pypng==0.20220715.0
-qrcode==7.4.2
-reportlab==4.0.4
-typing_extensions==4.11.0
-Werkzeug==3.0.2
-xlrd==2.0.1
+﻿blinker
+click
+colorama
+Flask
+itsdangerous
+Jinja2
+MarkupSafe
+Pillow
+pypng
+qrcode
+reportlab
+typing_extensions
+Werkzeug
+xlrd
